# NavigationRL

./: .gitignore  CMakeLists.txt  setup.py
Navigation_RL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Navigation_RL/algo/: DAGGER.py
Navigation_RL/algo/nav_ppo/: module.py  ppo.py  storage.py
Navigation_RL/algo/ppo/: module.py  noise_storage.py  ppo.py
Navigation_RL/env/: RaisimGymVecEnv.py  __init__.py
Navigation_RL/helper/: raisim_gym_helper.py
include/planning/: contactPlanning.hpp
rsc/: cfg.yaml
rsc/mini_cheetah/: mini-cheetah-vision-v1.6.urdf
rsc/policy/: full_2500.pt  full_5000.pt  mean2500.csv  mean5000.csv  var2500.csv  var5000.csv
script/: RL.py  joypad_test.py  navRL.py  pt_to_txt.py  test_policy.py
src/env/: BasicEigenTypes.hpp  Environment.hpp  RandomHeightMapGenerator.hpp  Reward.hpp  VectorizedEnvironment.hpp  debug_app.cpp  raisim_gym.cpp
